--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "reactstrap": "^8.1.1",
     "recharts": "^1.8.5",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "2",
