--- a/src/pages/register/package.json
+++ b/src/pages/register/package.json
@@ -1,6 +1,6 @@
 {
   "name": "register",
   "version": "0.0.0",
-  "private": true,
-  "main": "./Register.js"
+  "main": "./Register.js",
+  "private": true
 }
