--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "cross-env": "^6.0.3",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "styled-components": "^5.1.0"
   }
 }
