--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "7.6.0",
     "@babel/plugin-transform-runtime": "^7.9.6",
+    "@emotion/core": "^10.0.28",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
@@ -79,6 +80,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-sparklines": "^1.7.0",
+    "react-spinners": "^0.8.3",
     "react-toastify": "^5.4.1",
     "reactstrap": "^8.1.1",
     "recharts": "^1.8.5",
