--- a/src/pages/verification/package.json
+++ b/src/pages/verification/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "Verification",
-    "version": "0.0.0",
-    "private": true,
-    "main": "./Verification.js"
-  }
-  
+  "name": "verification",
+  "version": "0.0.0",
+  "private": true,
+  "main": "./index.js"
+}
