--- a/package.json
+++ b/package.json
@@ -44,9 +44,6 @@
     "font-awesome": "^4.7.0",
     "fs-extra": "7.0.1",
     "glyphicons-halflings": "^1.9.1",
-    "graphql": "^14.5.8",
-    "graphql-relay": "^0.6.0",
-    "graphql-sequelize": "^9.3.6",
     "helmet": "^3.21.2",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
@@ -74,16 +71,14 @@
     "react-blockcerts": "^0.9.5",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
-    "react-google-maps": "^9.4.5",
+    "react-dropzone": "^11.0.1",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-sparklines": "^1.7.0",
     "react-spinners": "^0.8.3",
-    "react-toastify": "^5.4.1",
+    "react-toastify": "^6.0.8",
     "reactstrap": "^8.1.1",
-    "recharts": "^1.8.5",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
@@ -91,8 +86,6 @@
     "resolve-url-loader": "2",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
-    "sequelize": "^5.21.2",
-    "sqlite3": "^4.1.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
